# JsonMax

./: .travis.yml  CMakeLists.txt  JsonMax.h  LICENSE  Makefile  README.md  _config.yml  getting-started.md  index.md  test.sh
docs/getting-started/: index.md
examples/: CMakeLists.txt  main.cpp  sweets.cpp  weather.cpp
examples/sweets/: CMakeLists.txt  sweets.cpp
examples/weather/: CMakeLists.txt  weather.cpp  weather.json
include/: Element.h  Exceptions.h  Iterator.h  JsonElement.h  JsonObject.h  JsonParser.h  Object.h  Pair.h  Parser.h  Tools.h  Type.h
include_generator/: CMakeLists.txt  main.cpp
single_include/: CMakeLists.txt  JsonMax.h  build_test.cpp
src/: CMakeLists.txt  Element.cpp  Element.h  Exceptions.h  Iterator.cpp  JsonElement.cpp  JsonObject.cpp  JsonParser.cpp  Object.cpp  Object.h  Pair.cpp  Pair.h  Parser.cpp  Parser.h  Tools.cpp  Tools.h  Type.cpp  Type.h  main.cpp
src/include_generator/: main.cpp
src/json_max/: CMakeLists.txt  Exceptions.h  Tools.cpp  Tools.h
src/json_max/model/: Element.cpp  Object.cpp  Pair.cpp  Type.cpp  Type.h  Utils.cpp  Utils.h
src/json_max/parser/: ArrayParser.cpp  ArrayParser.h  NumberParser.cpp  NumberParser.h  ObjectParser.cpp  ObjectParser.h  ParseException.h  Parser.cpp  Parser.h  StringParser.cpp  StringParser.h  StringValidator.cpp  StringValidator.h  Utils.h
test/: CMakeLists.txt  MainTest.cpp  ParsingTest.cpp  ValidateNumberTest.cpp  ValidateStringTest.cpp  main.cpp  test.cpp
test/cases/: HappyDaysParsing.cpp  NightmareParsing.cpp  StringValidation.cpp
test/input/: example.json  large.json
