add_library(JsonMax
        model/Element.cpp
        model/Object.cpp
        model/Pair.cpp
        model/Type.cpp
        parser/Parser.cpp
        parser/ObjectParser.cpp
        Tools.cpp parser/ArrayParser.cpp parser/ArrayParser.h parser/StringParser.cpp parser/StringParser.h parser/NumberParser.cpp parser/NumberParser.h)
